# auto-plant-waterer

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/ESP32_VL53L0X/: CMakeLists.txt
main/: CMakeLists.txt  auto-plant-waterer.c  bat.c  bat.h  cfg.c  cfg.h  idf_component.yml  pumps.c  pumps.h  tof.c  tof.cpp  tof.h  water_level.c  water_pumps.c  water_pumps.h  wifi.c  wifi.h  zb.c  zb.h
www/: index.html
